--- a/project.yml
+++ b/project.yml
@@ -31,6 +31,7 @@ targets:
     platform: iOS
     deploymentTarget: "14.1"
     sources: Marindeck
+    scheme: {}
     settings:
       base:
         DEVELOPMENT_TEAM: 726VR75V6L
