--- a/Marindeck/Info.plist
+++ b/Marindeck/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<string>en_US</string>
 	<key>CFBundleDisplayName</key>
 	<string>MarinDeck</string>
 	<key>CFBundleExecutable</key>
