--- a/.github/workflows/danger_swift.yml
+++ b/.github/workflows/danger_swift.yml
@@ -2,6 +2,12 @@ name: Danger Swift
 
 on: [pull_request]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  statuses: write
+
 jobs:
   danger:
     name: Danger
