--- a/.github/workflows/danger_swift.yml
+++ b/.github/workflows/danger_swift.yml
@@ -2,73 +2,6 @@ name: Danger Swift
 
 on: [pull_request]
 
-permissions:
-  contents: read
-  pull-requests: write
-  issues: write
-  statuses: write
 
-jobs:
-  danger:
-
-    runs-on: ubuntu-latest
-    timeout-minutes: 45
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Setup Swift
-        uses: fwal/setup-swift@v1
-
-      - name: Get Swift Version
-        id: get-swift-version
-        run: |
-          echo "::set-output name=swift-version::$(swift --version | head -1 | sed 's/^.*Swift version \([0-9]\.[0-9]\.[0-9]\) (.*)$/\1/')"
-        shell: bash
-
-      - name: Get Swift Version
-        run: swift --version
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-
-      - name: Cache Gems
-        uses: actions/cache@v2
-        env:
-          cache-name: gems
-        with:
-          path: vendor/bundle
-          key: v1-${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('Gemfile.lock') }}
-          restore-keys: |
-            v1-${{ runner.os }}-${{ env.cache-name }}-
-
-      - name: Install Gems
-        env:
-          BUNDLE_JOBS: 4
-          BUNDLE_RETRY: 3
-        run: |
-          bundle config set path 'vendor/bundle' ; bundle config set clean 'true'
-          bundle check || bundle install
-
-      - name: Cache DangerTools
-        uses: actions/cache@v2
-        env:
-          cache-name: danger-tools
-        with:
-          path: DangerTools
-          key: v1-${{ runner.os }}-${{ env.cache-name }}-${{ steps.get-swift-version.outputs.swift-version }}-${{ hashFiles('DangerTools/Package.resolved') }}
-          restore-keys: |
-            v1-${{ runner.os }}-${{ env.cache-name }}-${{ steps.get-swift-version.outputs.swift-version }}-
-
-      - name: Build DangerTools
-        run: |
-          ./DangerTools/.build/release/swiftlint --version || swift run -c release --package-path DangerTools --build-path DangerTools/.build swiftlint --version
-          sudo cp ./DangerTools/.build/release/swiftlint /usr/bin
-
-      - name: Run Danger
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          bundle exec danger
+- name: GitHub Action for Danger-Swift + SwiftLint
+  uses: 417-72KI/danger-swiftlint@v5
