ターゲットによってアプリ名を変更

--- a/Marindeck/Info.plist
+++ b/Marindeck/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>ja_JP</string>
 	<key>CFBundleDisplayName</key>
-	<string>MarinDeck</string>
+	<string>$(DISPLAY_APPNAME)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIcons</key>
