--- a/project.yml
+++ b/project.yml
@@ -32,7 +32,7 @@ settings:
   base:
     DEVELOPMENT_TEAM: 726VR75V6L
     MARKETING_VERSION: 0.1.1
-    CURRENT_PROJECT_VERSION: 0.1.
+    CURRENT_PROJECT_VERSION: 0.1.1
   config:
     debug:
       DEBUG_INFORMATION_FORMAT: "dwarf-with-dsym"
