Tweetボタンで開くTweetModalを選択

--- a/Marindeck/Info.plist
+++ b/Marindeck/Info.plist
@@ -47,6 +47,7 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>youtube</string>
+		<string>twitter</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
