--- a/Binding/package.json
+++ b/Binding/package.json
@@ -11,6 +11,8 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
-    "object": "link:MarinDeckObject"
+    "object": "link:MarinDeckObject",
+    "@types/jquery": "^3.5.13",
+    "@types/twit": "^2.2.30"
   }
 }
