ネイティブのプレビューを使用するか設定できるようにした。

--- a/project.yml
+++ b/project.yml
@@ -16,6 +16,9 @@ packages:
   RxWebKit:
     url: https://github.com/RxSwiftCommunity/RxWebKit
     exactVersion: 2.0.1
+  Loaf:
+    url: https://github.com/schmidyy/Loaf
+    exactVersion: 0.6.0
 
       
 
@@ -81,6 +84,7 @@ targets:
       - package: GiphyUISDK
       - package: RxWebKit
       - package: RxSwift
+      - package: Loaf
     preBuildScripts:
       - path: ./scripts/swiftlint.sh
         name: Run SwiftLint
@@ -104,3 +108,4 @@ targets:
       - package: GiphyUISDK
       - package: RxWebKit
       - package: RxSwift
+      - package: Loaf
