--- a/Binding/tsconfig.json
+++ b/Binding/tsconfig.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "noEmit": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noImplicitAny": false
   },
